<resources>
    <string name="app_name">Midas Treasures</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="language">Language</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="back_to_menu">back to menu</string>
    <string name="total_score">Total Score:</string>
    <string name="score">Score:</string>
    <string name="_100_points">100 points</string>
    <string name="_500_points">500 points</string>
    <string name="_2000_points">2000 points</string>
    <string name="_10000_points">10000 points</string>
    <string name="_50000_points">50000 points</string>
    <string name="_200000_points">200000 points</string>
    <string name="start">Start</string>
    <string name="back_to_menu1">back to menu</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="midas_treasures">Midas Treasures</string>

    <array name="languages">
        <item>English</item>
        <item>Русский</item>
    </array>

</resources>