<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDF8BE"
    tools:context=".fragments.MenuFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btSettings"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#64B308"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btPlay"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:backgroundTint="#64B308"
                android:text="@string/play"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/btExit"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_weight="1"
                android:backgroundTint="#64B308"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>