<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/points"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDF8BE"
    tools:context=".fragments.GameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTotalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/total_score"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvTotalScore"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll100PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv1.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv1.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll500PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll100PointsLine">

            <ImageView
                android:id="@+id/iv2.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv2.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv2.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv2.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2000PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll500PointsLine">

            <ImageView
                android:id="@+id/iv3.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv3.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv3.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv3.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll10000PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll2000PointsLine">

            <ImageView
                android:id="@+id/iv4.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv4.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv4.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv4.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll50000PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll10000PointsLine">

            <ImageView
                android:id="@+id/iv5.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv5.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv5.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv5.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll200000PointsLine"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll50000PointsLine">

            <ImageView
                android:id="@+id/iv6.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv6.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv6.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />

            <ImageView
                android:id="@+id/iv6.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sunduk" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv100Points"
            style="@style/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_100_points"
            app:layout_constraintBottom_toBottomOf="@+id/ll100PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll100PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll100PointsLine" />

        <TextView
            android:id="@+id/tv500Points"
            style="@style/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_500_points"
            app:layout_constraintBottom_toBottomOf="@+id/ll500PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll500PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll500PointsLine" />

        <TextView
            android:id="@+id/tv2000Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="@style/points"
            android:text="@string/_2000_points"
            app:layout_constraintBottom_toBottomOf="@+id/ll2000PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll2000PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll2000PointsLine" />

        <TextView
            android:id="@+id/tv10000Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_10000_points"
            style="@style/points"
            app:layout_constraintBottom_toBottomOf="@+id/ll10000PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll10000PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll10000PointsLine" />

        <TextView
            android:id="@+id/tv50000Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_50000_points"
            style="@style/points"
            app:layout_constraintBottom_toBottomOf="@+id/ll50000PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll50000PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll50000PointsLine" />

        <TextView
            android:id="@+id/tv200000Points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_200000_points"
            style="@style/points"
            app:layout_constraintBottom_toBottomOf="@+id/ll200000PointsLine"
            app:layout_constraintStart_toEndOf="@+id/ll200000PointsLine"
            app:layout_constraintTop_toTopOf="@+id/ll200000PointsLine" />

        <Button
            android:id="@+id/btStartStop"
            android:layout_width="0dp"
            android:layout_height="103dp"
            android:layout_marginTop="72dp"
            android:backgroundTint="#64B308"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@+id/btBackToMenu"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btBackToMenu"
            app:layout_constraintTop_toBottomOf="@+id/btBackToMenu" />

        <Button
            android:id="@+id/btBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#64B308"
            android:text="@string/back_to_menu"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>